test/bad/only-compile-time.fnl
(let [x 1]
  `(print ,x))
